@@ -71,7 +71,9 @@ Version 2.1.0
    - Ported local and distant mailbox detection code from 2.0.3 to 2.1.0
    - Decoding of quotedprintable encoded mails (IMAP4)
    - Error message for mails in unknown enoding (IMAP4)
-	
+   - Bugfix: base64 decoding now rejects invalid encoded strings
+   - New source files for decoding and converting
+
 Version 2.0.3
   * Roland Stigge:
     - Updated man page (section 1, "GTK+")
